--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>月曜日粉砕アプリ-MONDAY SMASH</title>
     
     <!-- OGP Tags for Social Sharing -->
-    <meta property="og:title" content="月曜日粉砕アプリ-MONDAY SMASH">
-    <meta property="og:description" content="さぁ、その手で忌まわしき月曜日を破壊し、輝かしい週末を取り戻すのだ！">
-    <meta property="og:image" content="https://smash-monday.kagekin.com/img/monsmash.png">
-    <meta name="twitter:card" content="summary_large_image">
+<meta property="og:url" content="https://smash-monday.kagekin.com/"> <meta property="og:type" content="website"> <meta property="og:title" content="月曜日粉砕アプリ-MONDAY SMASH">
+<meta property="og:description" content="さぁ、その手で忌まわしき月曜日を破壊し、輝かしい週末を取り戻すのだ！">
+<meta property="og:image" content="https://smash-monday.kagekin.com/img/monsmash.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="月曜日粉砕アプリ-MONDAY SMASH"> <meta name="twitter:description" content="さぁ、その手で忌まわしき月曜日を破壊し、輝かしい週末を取り戻すのだ！"> <meta name="twitter:image" content="https://smash-monday.kagekin.com/img/monsmash.png"> 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
